default/objects/Case/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <description>to store email of related account on case/STCP1-619/ updated in WFR 'Save Account Email'</description>
    <label>Account Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>