default/objects/Case/fields/AllCommunicationsNumber__c.field-meta.xml
<CustomField>
    <fullName>AllCommunicationsNumber__c</fullName>
    <description>STCP1-56/calculate the sum of internal and external communications made by owner in particular case/using in reports and dashboards</description>
    <formula>MessagesSentToNonClient__c + PostsByOwner__c + MessagesSentToClient__c</formula>
    <label>AllCommunicationsNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>