default/objects/Case/fields/Case_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Case_Overdue__c</fullName>
    <formula>If(  Due_Date__c  &lt; TODAY(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Overdue</label>
    <type>Checkbox</type>
</CustomField>