default/objects/Case/fields/Case_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Icon__c</fullName>
    <description>STCP1-41/display icon for Case statuses</description>
    <formula>IMAGE(
Case(Status ,
'New', '/resource/1559219251000/CaseStatusNew',
'Internally waiting', '/resource/1559219313000/CaseStatusInternallyWaiting',
'Internally updated', '/resource/1559219288000/CaseStatusInternallyUpdated',
'Customer waiting','/resource/1559219275000/CaseStatusWaitingForCustomer',
'Customer updated','/resource/1560526909000/CaseStatusCustomerUpdated',
'Resolved','/resource/1560526947000/CaseStatusResolved',
'Closed','/resource/1559219301000/CaseStatusClosed',
'Reopened','/resource/1588757147000/CaseStatusReopened',
NULL),
'Status'
)</formula>
    <label>Case Status Icon</label>
    <type>Text</type>
</CustomField>