default/objects/Case/fields/Close_Case_Note__c.field-meta.xml
<CustomField>
    <fullName>Close_Case_Note__c</fullName>
    <description>Fill in the comment when closing the case</description>
    <label>Close_Case_Note</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>