default/objects/Case/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>ID of a customer from web site</description>
    <inlineHelpText>ID of a customer from web site</inlineHelpText>
    <label>Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>