default/objects/Case/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <label>(Expected) Date Closed</label>
    <type>Date</type>
</CustomField>