default/objects/Case/fields/Dev_t_time_estimate_man_days__c.field-meta.xml
<CustomField>
    <fullName>Dev_t_time_estimate_man_days__c</fullName>
    <inlineHelpText>Time required to complete the case. Calculated in man-days.</inlineHelpText>
    <label>Dev-t time estimate (man-days)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>