default/objects/Case/fields/ERP_GFN_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_GFN_Number__c</fullName>
    <formula>ERP__r.GFN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GFN-GFN</label>
    <type>Text</type>
</CustomField>