default/objects/Case/fields/ERP_PCMS_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_PCMS_Number__c</fullName>
    <formula>ERP__r.PCMS_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GFN-PCMS</label>
    <type>Text</type>
</CustomField>