default/objects/Case/fields/First_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Interaction_Date__c</fullName>
    <description>STCP1-446/ the date/time when an agent sent the first response to a client within a case/ updated in process builder  'Update_Support_Case_Fields'</description>
    <inlineHelpText>The date/time when an agent sent the first response to client within a case</inlineHelpText>
    <label>First Interaction Date</label>
    <type>DateTime</type>
</CustomField>