default/objects/Case/fields/First_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Owner_Change_Date__c</fullName>
    <description>STCP1-251/displaying date time when the owner was changed first time/updated in WFR 'FirstOwnerChangeDate'</description>
    <label>First Owner Change Date</label>
    <type>DateTime</type>
</CustomField>