default/objects/Case/fields/Front_Office__c.field-meta.xml
<CustomField>
    <fullName>Front_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <description>STCP1-303/to determine if a case is related to Front or Back office, for DE support.</description>
    <inlineHelpText>If checked the case is related to front office.</inlineHelpText>
    <label>Front Office</label>
    <type>Checkbox</type>
</CustomField>