default/objects/Case/fields/Handling_Time_Net__c.field-meta.xml
<CustomField>
    <fullName>Handling_Time_Net__c</fullName>
    <description>STCP1-445/ STCP1-630 - shows the number of hours between date/time closed and owner first change date without considering non-working hours - Net Handling time.
SHELL - 8AM-5PM (GMT+2)
CCS - 7AM-7PM (GMT+2)</description>
    <formula>IF(

IsClosed &amp;&amp; NOT(ISBLANK(First_Owner_Change_Date__c)) &amp;&amp; RecordType.DeveloperName = 'Support',

9 *((5*FLOOR((DATEVALUE(ClosedDate)-DATE(1900,1,8))/7) + MIN(5, MOD(DATEVALUE(ClosedDate)-DATE(1900,1,8),7)+ MIN(1,24/9*(MOD(ClosedDate-DATETIMEVALUE('1900-01-08 06:00:00'), 1))) )) - (5*FLOOR((DATEVALUE(First_Owner_Change_Date__c + MAX(DATETIMEVALUE(TEXT(DATEVALUE(First_Owner_Change_Date__c))&amp;" 06:00:00")-First_Owner_Change_Date__c,0))- DATE(1900,1,8))/7)+ MIN(5, MOD(DATEVALUE(First_Owner_Change_Date__c+MAX(DATETIMEVALUE(TEXT(DATEVALUE(First_Owner_Change_Date__c))&amp;" 06:00:00")-First_Owner_Change_Date__c,0))-DATE(1900,1,8),7)+ MIN(1,24/9*(MOD(First_Owner_Change_Date__c + MAX(DATETIMEVALUE(TEXT(DATEVALUE(First_Owner_Change_Date__c))&amp;" 06:00:00")-First_Owner_Change_Date__c,0)-DATETIMEVALUE('1900-01-08 06:00:00'), 1))))) ),

IF(IsClosed &amp;&amp; NOT(ISBLANK(First_Owner_Change_Date__c)) &amp;&amp;  RecordType.DeveloperName = 'Support_CCS',

12 *((5*FLOOR((DATEVALUE(ClosedDate)-DATE(1900,1,8))/7) + MIN(5, MOD(DATEVALUE(ClosedDate)-DATE(1900,1,8),7)+ MIN(1,24/12*(MOD(ClosedDate-DATETIMEVALUE('1900-01-08 05:00:00'), 1))) )) - (5*FLOOR((DATEVALUE(First_Owner_Change_Date__c + MAX(DATETIMEVALUE(TEXT(DATEVALUE(First_Owner_Change_Date__c))&amp;" 05:00:00")-First_Owner_Change_Date__c,0))- DATE(1900,1,8))/7)+ MIN(5, MOD(DATEVALUE(First_Owner_Change_Date__c+MAX(DATETIMEVALUE(TEXT(DATEVALUE(First_Owner_Change_Date__c))&amp;" 05:00:00")-First_Owner_Change_Date__c,0))-DATE(1900,1,8),7)+ MIN(1,24/12*(MOD(First_Owner_Change_Date__c + MAX(DATETIMEVALUE(TEXT(DATEVALUE(First_Owner_Change_Date__c))&amp;" 05:00:00")-First_Owner_Change_Date__c,0)-DATETIMEVALUE('1900-01-08 05:00:00'), 1))))) ),

Null)

)</formula>
    <inlineHelpText>The number of hours between date/time closed and first owner change date considering working hours only.
SHELL - 8AM-5PM (PRG Time)
CCS - 7AM-7PM (PRG Time)</inlineHelpText>
    <label>Handling Time Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>