default/objects/Case/fields/Initial_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Initial_Account_ID__c</fullName>
    <description>Stores the ID of initial associated account for email-to-case cases only (STCP1-636). Updated in WRF 'Check Is Account associated checkbox	'</description>
    <label>Initial Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>