default/objects/Case/fields/Initial_Case_Queue__c.field-meta.xml
<CustomField>
    <fullName>Initial_Case_Queue__c</fullName>
    <description>display initial case queue/updated in WFR</description>
    <label>Initial Case Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>