default/objects/Case/fields/Is_account_associated__c.field-meta.xml
<CustomField>
    <fullName>Is_account_associated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom check-box field to track if the case was associated with an account while creation by email-to-case (STCP1-636)/updated in 'Check Is Account Associated Checkbox' workflow</description>
    <inlineHelpText>Checked if a Case was associated with an Account while email-to-case creation</inlineHelpText>
    <label>Is Account associated</label>
    <type>Checkbox</type>
</CustomField>