default/objects/Case/fields/Is_Account_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field to track if initial related account was changed or not (STCP1-636) - for email-to-case cases created only/updated in WFR 'Checked Is account changed checkbox'</description>
    <inlineHelpText>Checked if initial related Account was changed</inlineHelpText>
    <label>Is Account Changed</label>
    <type>Checkbox</type>
</CustomField>