default/objects/Case/fields/JIRA_Id__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Id__c</fullName>
    <label>JIRA Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>