default/objects/Case/fields/Jira_INTERCODEC__c.field-meta.xml
<CustomField>
    <fullName>Jira_INTERCODEC__c</fullName>
    <label>Jira</label>
    <length>20</length>
    <type>Text</type>
</CustomField>