default/objects/Case/fields/MessagesSentToClient__c.field-meta.xml
<CustomField>
    <fullName>MessagesSentToClient__c</fullName>
    <defaultValue>0</defaultValue>
    <description>store the number of messages sent to a client in a case/updated in Process builder 'Update Support Case Fields'</description>
    <label>MessagesSentToClient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>