default/objects/Case/fields/MessagesSentToNonClient__c.field-meta.xml
<CustomField>
    <fullName>MessagesSentToNonClient__c</fullName>
    <defaultValue>0</defaultValue>
    <description>store the number of emails sent to non-client (collegue) in particular case/updated in Process builder 'Update Support Case Fields'</description>
    <label>MessagesSentToNonClient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>