default/objects/Case/fields/NVMContactWorld__NVMNodeOverride__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
    <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
    <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
    <label>NVMNodeOverride</label>
    <length>255</length>
    <type>Text</type>
</CustomField>