default/objects/Case/fields/NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
    <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
    <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
    <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>