default/objects/Case/fields/NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
    <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
    <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
    <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>