default/objects/Case/fields/NVMContactWorld__NVMRoutable__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__NVMRoutable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine whether a case should be routed to an agent via NVM</description>
    <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
    <label>NVMRoutable</label>
    <type>Checkbox</type>
</CustomField>