default/objects/Case/fields/NVMContactWorld__Skills__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Skills__c</fullName>
    <label>Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>