default/objects/Case/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>Phone Number of the customer that called and the call task was created</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>