default/objects/Case/fields/PostsByOwner__c.field-meta.xml
<CustomField>
    <fullName>PostsByOwner__c</fullName>
    <defaultValue>0</defaultValue>
    <description>STCP1-56/store the number of text posts made by Owner in particular case</description>
    <label>PostsByOwner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>