default/objects/Case/fields/Processing_time__c.field-meta.xml
<CustomField>
    <fullName>Processing_time__c</fullName>
    <description>STCP1-366/shows the total number of hours between date/time closed and date/time opened - Gross Resolution Time</description>
    <formula>IF(
IsClosed,(ClosedDate - CreatedDate)*24,
Null
)</formula>
    <inlineHelpText>The total number of hours between date/time closed and date/time opened.</inlineHelpText>
    <label>Processing time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>