default/objects/Case/fields/Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Queue_Email__c</fullName>
    <description>STCP1-37/STCP1-214 -  updated in Process builder 'Save Last Queue Owner Email' or manually while creating a case, using in action button 'Email' on Case for pre-defined values of BCC and FromAddress fields</description>
    <inlineHelpText>Email which defines pre-defined values for FromAddress and BCC fields on outgoing email messages</inlineHelpText>
    <label>Queue Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>bonus@ccs.cz</fullName>
            </value>
            <value>
                <fullName>eurotoll@ccs.cz</fullName>
            </value>
            <value>
                <fullName>klantendienst@fleetcorcards.be</fullName>
            </value>
            <value>
                <fullName>klantenservice@fleetcor.nl</fullName>
            </value>
            <value>
                <fullName>kredit@ccs.cz</fullName>
            </value>
            <value>
                <fullName>kredit@ccs.sk</fullName>
            </value>
            <value>
                <fullName>kundenservice@fleetcor.at</fullName>
            </value>
            <value>
                <fullName>kundenservice@fleetcor.ch</fullName>
            </value>
            <value>
                <fullName>kundenservice@fleetcor.de</fullName>
            </value>
            <value>
                <fullName>market@ccs.cz</fullName>
            </value>
            <value>
                <fullName>myto@ccs.cz</fullName>
            </value>
            <value>
                <fullName>obchod@ccs.cz</fullName>
            </value>
            <value>
                <fullName>obslugaklienta@fleetcor.pl</fullName>
            </value>
            <value>
                <fullName>premiumservice@fleetcor.eu</fullName>
            </value>
            <value>
                <fullName>premiumservis@ccs.cz</fullName>
            </value>
            <value>
                <fullName>provoz@ccs.cz</fullName>
            </value>
            <value>
                <fullName>reklamace@ccs.cz</fullName>
            </value>
            <value>
                <fullName>serviceclients@fleetcor.ch</fullName>
            </value>
            <value>
                <fullName>serviceclients@fleetcor.fr</fullName>
            </value>
            <value>
                <fullName>serviceclients@fleetcor.lu</fullName>
            </value>
            <value>
                <fullName>serviceclients@fleetcorcards.be</fullName>
            </value>
            <value>
                <fullName>servizioclienti@fleetcor.ch</fullName>
            </value>
            <value>
                <fullName>ugyfelszolgalat@fleetcor.hu</fullName>
            </value>
            <value>
                <fullName>uta@ccs.cz</fullName>
            </value>
            <value>
                <fullName>zakaznicka.podpora@ccs.cz</fullName>
            </value>
            <value>
                <fullName>Zakaznicke@ccs.sk</fullName>
            </value>
            <value>
                <fullName>zakaznickyservis@fleetcor.cz</fullName>
            </value>
            <value>
                <fullName>zakaznickyservis@fleetcor.sk</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.de</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.nl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>