default/objects/Case/fields/Reaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Time__c</fullName>
    <description>STCP1-446/to display time between the first interaction with a client and creation date - Gross Reaction Time</description>
    <formula>IF( 
NOT(ISBLANK(First_Interaction_Date__c)) &amp;&amp;  OR(CreatedBy.Alias = 'autocase', CreatedBy.Alias = 'intadmin'),
(First_Interaction_Date__c -  CreatedDate)*24,
Null 
)</formula>
    <inlineHelpText>The total number of hours between date/time opened and the date/time when the first interaction with a client has been made.</inlineHelpText>
    <label>Reaction Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>