default/objects/Case/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>