default/objects/Case/fields/Sub_topic__c.field-meta.xml
<CustomField>
    <fullName>Sub_topic__c</fullName>
    <label>Sub topic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Topic__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Dispute / Question</fullName>
            </value>
            <value>
                <fullName>+/-</fullName>
            </value>
            <value>
                <fullName>Order new card(s)</fullName>
            </value>
            <value>
                <fullName>Block my card(s)</fullName>
            </value>
            <value>
                <fullName>Forgotten PIN code</fullName>
            </value>
            <value>
                <fullName>Question about my Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice Dispute</fullName>
            </value>
            <value>
                <fullName>Invoice Resend</fullName>
            </value>
            <value>
                <fullName>Change Method of invoice Distribution</fullName>
                <label>Change of Invoice Distribution/Freq</label>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Contact Person Change</fullName>
            </value>
            <value>
                <fullName>Bank Details Change</fullName>
            </value>
            <value>
                <fullName>Company Name Change</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>ECO Program</fullName>
            </value>
            <value>
                <fullName>ClubSmart</fullName>
            </value>
            <value>
                <fullName>Guarantee</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
                <label>FAQs/General queries</label>
            </value>
            <value>
                <fullName>Carnet</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>VAT Recovery</fullName>
            </value>
            <value>
                <fullName>Internal 1</fullName>
            </value>
            <value>
                <fullName>Card Parameter Change</fullName>
                <label>Card changes</label>
            </value>
            <value>
                <fullName>Card Other Questions</fullName>
                <label>Card other</label>
            </value>
            <value>
                <fullName>New Customer Credentials</fullName>
            </value>
            <value>
                <fullName>Payment confirmation</fullName>
            </value>
            <value>
                <fullName>Subaccount</fullName>
            </value>
            <value>
                <fullName>WPO</fullName>
            </value>
            <value>
                <fullName>EV Charging</fullName>
            </value>
            <value>
                <fullName>Order new Carnet/Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>