default/objects/Case/fields/Time_Estimated_man_hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Estimated_man_hours__c</fullName>
    <label>Time Estimated (man-hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>